Fix canvas resize issue (stretch issue unsolved)

--- a/src/css/base.styl
+++ b/src/css/base.styl
@@ -18,11 +18,11 @@ html
     min-height 500px
     font-size 10px
     font-family 'PragatiNarrow', '-apple-system', 'Helvetica Neue', 'Hiragino Kaku Gothic ProN', 'Yu Gothic Medium', 'Meiryo', 'sans-serif'
-    background-color #ececec
 
 body
     relative
     height 100%
+    background-color #0c0c0c
 
     > #board
         z-index 2
@@ -102,3 +102,4 @@ body
 
         > canvas
             display block
+            margin 0 auto
